--- a/gradle.properties
+++ b/gradle.properties
@@ -6,5 +6,6 @@ archUnitVersion=1.0.0
 mapstructVersion=1.4.2.Final
 jacksonVersion=2.13.2.2
 springDataJpaVersion=2.7.7
+springWebVersion=2.7.7
 jaxbApiVersion=2.3.1
 assertJVersion=3.24.2
