--- a/gradle.properties
+++ b/gradle.properties
@@ -7,5 +7,8 @@ mapstructVersion=1.4.2.Final
 jacksonVersion=2.13.2.2
 springDataJpaVersion=2.7.7
 springWebVersion=2.7.7
+springTestVersion=2.7.7
 jaxbApiVersion=2.3.1
 assertJVersion=3.24.2
+aspectjweaverVersion=1.9.19
+h2Version=2.1.214
