--- a/module-repository/build.gradle
+++ b/module-repository/build.gradle
@@ -1,5 +1,4 @@
 dependencies {
-    testImplementation 'org.mockito:mockito-junit-jupiter:5.3.1'
-    implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
-    runtimeOnly 'com.h2database:h2:2.1.214'
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+    runtimeOnly "com.h2database:h2:$h2Version"
 }
