--- a/module-service/build.gradle
+++ b/module-service/build.gradle
@@ -2,8 +2,7 @@ dependencies {
     annotationProcessor "org.mapstruct:mapstruct-processor:$mapstructVersion"
 
     implementation project(':module-repository')
-    testImplementation 'org.mockito:mockito-junit-jupiter:5.3.1'
     implementation "org.mapstruct:mapstruct:$mapstructVersion"
     implementation 'org.springframework:spring-aop:5.3.24'
-    implementation 'org.aspectj:aspectjweaver:1.9.19'
+    implementation "org.aspectj:aspectjweaver:$aspectjweaverVersion"
 }
