--- a/module-web/build.gradle
+++ b/module-web/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
     implementation project(':module-service')
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
-    testImplementation 'org.mockito:mockito-junit-jupiter:5.3.1'
+
+    testImplementation 'io.rest-assured:rest-assured:5.3.1'
 }
