Task refactoring done, tests added

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,5 @@ jaxbApiVersion=2.3.1
 assertJVersion=3.24.2
 aspectjweaverVersion=1.9.19
 h2Version=2.1.214
+hamcrestVersion=2.2
+restAssuredVersion=5.3.1
